[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/menus/pages/main_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/menus/title_screen/dungeon background 3 (1).png" type="Texture" id=2]
[ext_resource path="res://ui/menus/menu_options/menu_options.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/menus/title_screen/splash_art_post_processing.png" type="Texture" id=5]
[ext_resource path="res://ui/menus/title_screen/title_screen_menus.gd" type="Script" id=6]
[ext_resource path="res://ui/menus/title_screen/title_screen.gd" type="Script" id=7]
[ext_resource path="res://ui/menus/menu_credits/menu_credits.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/fonts/Daydream.ttf" type="DynamicFontData" id=9]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 bg_color: hint_color;

float rand(vec2 st) {
    return fract(sin(dot(st.xy, vec2(12.9898,78.233))) * 43758.5453123);
}

void fragment() {
	float size = 100.0;
	float prob = 0.9;
	vec2 pos = floor(1.0 / size * FRAGCOORD.xy);
	float color = 0.0;
	float starValue = rand(pos);

	if (starValue > prob)
	{
		vec2 center = size * pos + vec2(size, size) * 0.5;
		float t = 0.9 + 0.2 * sin(TIME * 8.0 + (starValue - prob) / (1.0 - prob) * 45.0);
		color = 1.0 - distance(FRAGCOORD.xy, center) / (0.5 * size);
		color = color * t / (abs(FRAGCOORD.y - center.y)) * t / (abs(FRAGCOORD.x - center.x));
	}
	else if (rand(SCREEN_UV.xy / 20.0) > 0.996)
	{
		float r = rand(SCREEN_UV.xy);
		color = r * (0.85 * sin(TIME * (r * 5.0) + 720.0 * r) + 0.95);
	}
	COLOR = vec4(vec3(color),1.0) + bg_color;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/bg_color = null

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 9 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -8.0
margin_right = 2062.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.316817, 0.334707 )
texture = ExtResource( 5 )

[node name="background" type="TextureRect" parent="."]
show_behind_parent = true
material = SubResource( 3 )
margin_left = -9.0
margin_top = -7.0
margin_right = 1527.0
margin_bottom = 1017.0
rect_scale = Vector2( 0.212927, 0.181243 )
texture = ExtResource( 2 )

[node name="AtenuateBackground" type="ColorRect" parent="."]
visible = false
margin_left = -2.0
margin_top = -7.0
margin_right = 38.0
margin_bottom = 33.0
rect_scale = Vector2( 16.2931, 9.33244 )
color = Color( 0, 0, 0, 0.67451 )

[node name="Menus" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="MainMenu" parent="Menus" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 100.5
margin_top = 50.0
margin_right = 499.5
margin_bottom = 323.0

[node name="MenuOptions" parent="Menus" instance=ExtResource( 4 )]
visible = false

[node name="MenuCredits" parent="Menus" instance=ExtResource( 8 )]
visible = false

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.219608 )
margin_left = 528.0
margin_top = 346.0
margin_right = 661.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 1 )
text = "demo version "

[connection signal="pressed" from="Menus/MainMenu/VBoxContainer/OptionsButton" to="Menus" method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menus/MainMenu/VBoxContainer/CreditsButton" to="Menus" method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Menus/MainMenu/VBoxContainer/QuitButton" to="Menus" method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Menus/MenuOptions/Button" to="Menus" method="_on_Button_pressed"]
[connection signal="pressed" from="Menus/MenuCredits/Button" to="Menus" method="_on_Back_Button_of_Credits_pressed"]

[editable path="Menus/MainMenu"]
[editable path="Menus/MenuOptions"]
[editable path="Menus/MenuOptions/Sliders/Master/MasterSlider"]
[editable path="Menus/MenuOptions/Sliders/Sound/SoundSlider"]
[editable path="Menus/MenuCredits"]
